# picolauncher

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  _justfile  justfile  os.p8
.github/workflows/: ci.yml
design/: console.ase  logo.ase  picocad_showcase.ase
design/alanxoc3-tests/: pipe_test  test.lua
design/splashscreen/: splash_concept.ase  splash_spritesheet.ase
design/ui_mockup/: logo.ase  pexsplore.ase
dev/hooks/: pre-commit
dev/scripts/: build-linux-aarch64.sh  build-linux-armv7.sh  build-linux-x86_64.sh  build-macos-aarch64.sh  build-windows.sh  build.sh  build_linux.sh  build_windows.sh  flash_firmware.sh  p8scale.lua
drive/: config.txt  config_template.txt
drive/carts/: anim.p8  apps.p8  bbs  gallery.p8  gyro_demo.p8  launcher.p8  main_menu.p8  menu.p8  mirror.p8  music_player.p8  os.p8  pexsplore.p8  pexsplore_bbs.p8  pexsplore_home.p8  pexsplore_settings.p8  pico-8-logo.p8  serial.p8  settings.p8  splashscreen.p8  timer.p8  tunes.p8  tween.lua  ui.p8  utils.p8  vkeyboard.p8
drive/carts/carts/: oblivion_eve-12.p8
drive/carts/games/: birdswithguns-5.p8  bunbunsamurai-12.p8  celeste.p8  cherrybomb-0.p8  mot_grandprix2-0.p8  pico_night_punkin.p8  poom_0-9.p8  suika_demake-9.p8  swordfish.p8
drive/carts/labels/: birdswithguns-5.64.p8  birdswithguns-5.p8  bunbunsamurai-12.64.p8  bunbunsamurai-12.p8  celeste.64.p8  celeste.p8  cherrybomb-0.64.p8  cherrybomb-0.p8  mot_grandprix2-0.64.p8  mot_grandprix2-0.p8  oblivion_eve-12.64.p8  oblivion_eve-12.p8  pico_night_punkin.64.p8  pico_night_punkin.p8  poom_0-9.64.p8  poom_0-9.p8  suika_demake-9.64.p8  swordfish.64.p8  swordfish.p8
drive/carts/metadata/: birdswithguns-5.json  birdswithguns-5.lua  bunbunsamurai-12.json  bunbunsamurai-12.lua  celeste.json  celeste.lua  cherrybomb-0.json  cherrybomb-0.lua  mot_grandprix2-0.json  mot_grandprix2-0.lua  oblivion_eve-12.json  oblivion_eve-12.lua  pico_night_punkin.json  pico_night_punkin.lua  poom_0-9.json  poom_0-9.lua  suika_demake-9.json  swordfish.json  swordfish.lua
drive/carts/music/: birdswithguns-5.p8  bunbunsamurai-12.p8  celeste.p8  cherrybomb-0.p8  mot_grandprix2-0.p8  oblivion_eve-12.p8  pico_night_punkin.p8  poom_0-9.p8  suika_demake-9.p8  swordfish.p8
pexos/: Cargo.toml
scripts/: png2cart.py  table-string-encode.lua
src/: bbs.rs  bluetooth.rs  cli.rs  consts.rs  exe.rs  image.rs  lib.rs  main.rs  p8util.rs  scrape.rs
src/db/: mod.rs  schema.rs
src/hal/: linux.rs  mod.rs  windows.rs
src/hal/dummy/: bluetooth.rs  gyro.rs  mod.rs  network.rs
src/hal/linux/: bluetooth.rs  gyro.rs  mod.rs  network.rs
src/hal/macos/: mod.rs  network.rs
