[package]
name = "picolauncher"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Daniel Liu <mr.picklepinosaur@gmail.com>"]
description = ""
repository = ""

[features]

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "native-tls-vendored"] }
notify = "6.1"
notify-debouncer-full = "0.3"
image = "0.25"
ndarray = "0.16"
strum = "0.26"
strum_macros = "0.26"
pino_deref = "0.1.1"

clap = { version = "4.5", features = ["derive"] }
lazy_static = "1.5"
regex = "1.10.5"
anyhow = "1.0.86"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["fs", "process", "signal"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["namedpipeapi", "handleapi", "winbase"] }

[[bin]]
name = "picolauncher"
path = "src/main.rs"

[[bin]]
name = "p8util"
path = "src/cli.rs"
