[package]
name = "picolauncher"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Daniel Liu <mr.picklepinosaur@gmail.com>"]
description = ""
repository = ""

[features]
wifi = []

[dependencies]
notify = "6.1"
notify-debouncer-full = "0.3"
image = "0.25"
ndarray = "0.16"
strum = "0.26"
strum_macros = "0.26"
pino_deref = "0.1.1"
libc = "0.2.155" # or the latest available version

# rusqlite = { version = "0.32" }
diesel = { version = "2.2.6", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }

clap = { version = "4.5", features = ["derive"] }
lazy_static = "1.5"
regex = "1.10.5"
anyhow = "1.0.86"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
log = "0.4"
env_logger = "0.11"

network-manager = { version = "0.13.3", git = "https://github.com/balena-io-modules/network-manager" }
dbus = "0.9"


# temp dependencies for scraper functionality
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "native-tls-vendored"] }
headless_chrome = "1"
urlencoding = "2.1"
scraper = "0.19"
futures = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["fs", "process", "signal"] }
bluer = {version="0.17.3", features=["full"]}

[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.29", features = ["fs", "process", "signal"] }



[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["namedpipeapi", "handleapi", "winbase"] }

[[bin]]
name = "picolauncher"
path = "src/main.rs"

[[bin]]
name = "p8util"
path = "src/cli.rs"

